feat(client): loader component

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 MONGO_URI='mongodb+srv://barkhagupta401:XXjbr5KHwlKMGOtl@cluster0.axonhkh.mongodb.net/'
 JWT_SECRET='paytmserverV1'
+PORT=8000
 
 # XXjbr5KHwlKMGOtl
 # mongodb+srv://barkhagupta401:<password>@cluster0.axonhkh.mongodb.net/
